--- a/src/test/resources/instancio.properties
+++ b/src/test/resources/instancio.properties
@@ -1,3 +1,4 @@
-#Sat Feb 18 11:54:19 CET 2023
-subtype.de.dafriedmann.foo.IFoo=de.dafriedmann.foo.impl.Foo
-subtype.de.dafriedmann.foo.IBar=de.dafriedmann.foo.impl.Bar
+#Sat Jul 01 15:21:31 CEST 2023
+# Example for subtype mapping via properties
+# subtype.de.dafriedmann.foo.IFoo=de.dafriedmann.foo.impl.Foo
+# subtype.de.dafriedmann.foo.IBar=de.dafriedmann.foo.impl.Bar
